# pxl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  attributions.md
engine/: CMakeLists.txt
engine/include/pxl/: backbuffer.h  config.h  content.h  engine.h  filesystem.h  log.h  time.h  types.h
engine/include/pxl/assets/: BMFont.h  aseprite.h  audio.h  audioclip.h  audioformats.h  font.h  image.h  imageformats.h  json.h  ldtk.h  ogmo.h
engine/include/pxl/audio/: audiobuffer.h  audiosource.h
engine/include/pxl/backends/: audio_backend.h  filesystem_backend.h  gamepad.h  graphics_backend.h  imageproc_backend.h  keyboard.h  mouse.h  platform_backend.h  video_backend.h
engine/include/pxl/containers/: array.h  map.h  stackvector.h  string.h  vector.h
engine/include/pxl/ec/: component.h  component_interface.h  drawables.h  entity.h  transform.h  updateables.h  world.h
engine/include/pxl/graphics/: Subtexture.h  atlas.h  batch.h  blend.h  drawcall.h  graphics_backend.h  material.h  mesh.h  rendertarget.h  sampler.h  shader.h  sprite.h  sprite_font.h  spritefont.h  texture.h  tileset.h  vertex.h
engine/include/pxl/image/: aseprite.h  font.h  image.h  ogmo.h
engine/include/pxl/input/: gamepad_backend.h  keyboard_backend.h  keyboard_keys.h  mouse_backend.h
engine/include/pxl/math/: calc.h  color.h  grid.h  mat3x2.h  mat4x4.h  rect.h  tween.h  vec2.h  vec3.h
engine/include/pxl/ui/: imgui_impl_pxl.h
engine/include/pxl/utils/: action.h  component.h  content.h  entity.h  filestream.h  image_packer.h  input_binding.h  scene.h  scene_manager.h  sprite.h  sprite_font.h  tileset.h
engine/include/pxl/utils/components/: camera.h
engine/libs/stb/: stb_image.h  stb_truetype.h  stb_vorbis.c  stb_vorbis.h
engine/src/: backbuffer.cpp  config.cpp  content.cpp  engine.cpp  filesystem.cpp  log.cpp  time.cpp  types.cpp
engine/src/assets/: BMFont.cpp  aseprite.cpp  audio.cpp  audioformats.cpp  font.cpp  image.cpp  imageformats.cpp  ldtk.cpp  ogmo.cpp
engine/src/audio/: audiobuffer.cpp  audiosource.cpp
engine/src/backends/: audio_backend_dummy.cpp  audio_backend_openal.cpp  filesystem_backend_cpp.cpp  gamepad.cpp  graphics_backend_gl.cpp  imageproc_backend_cpp.cpp  keyboard.cpp  mouse.cpp  platform_backend_dummy_win32.cpp  platform_backend_sdl.cpp  video_backend_dummy.cpp  video_backend_ffmpeg.cpp
engine/src/containers/: array.cpp  map.cpp  string.cpp  vector.cpp
engine/src/ec/: component.cpp  component_interface.cpp  drawables.cpp  entity.cpp  transform.cpp  updateables.cpp  world.cpp
engine/src/graphics/: Subtexture.cpp  atlas.cpp  batch.cpp  blend.cpp  drawcall.cpp  graphics_backend_gl.cpp  material.cpp  mesh.cpp  render_target.cpp  rendertarget.cpp  sampler.cpp  shader.cpp  sprite.cpp  sprite_font.cpp  spritefont.cpp  texture.cpp  tileset.cpp
engine/src/image/: aseprite.cpp  font.cpp  image.cpp  ogmo.cpp
engine/src/input/: gamepad_backend.cpp  keyboard_backend.cpp  mouse_backend.cpp
engine/src/math/: calc.cpp  color.cpp  grid.cpp  mat3x2.cpp  mat4x4.cpp  rect.cpp  tween.cpp  vec2.cpp  vec3.cpp
engine/src/ui/: imgui_impl_pxl.cpp
engine/src/utils/: component.cpp  content.cpp  entity.cpp  filestream.cpp  image_packer.cpp  input_binding.cpp  scene.cpp  scene_manager.cpp  sprite.cpp  sprite_font.cpp  tileset.cpp
engine/src/utils/components/: camera.cpp
examples/helloworld/: CMakeLists.txt
examples/helloworld/src/: main.cpp
examples/palette/: CMakeLists.txt
examples/palette/content/: gb0.ase  gb1.ase  gb2.ase  image.ase
examples/palette/src/: main.cpp
include/pxl/: config.h  engine.h  types.h
include/pxl/graphics/: batch.h  material.h  render_target.h  sampler.h  shader.h  texture.h  vertex.h
include/pxl/image/: image.h
include/pxl/input/: gamepad_buttons.h
include/pxl/math/: mat3x2.h  vec4.h
include/pxl/utils/: component.h  content.h  entity.h  scene.h
src/: config.cpp  engine.cpp  time.cpp
src/graphics/: batch.cpp  graphics_backend_gl.cpp  material.cpp  render_target.cpp  sampler.cpp  shader.cpp  texture.cpp
src/image/: image.cpp
src/input/: keyboard_backend.cpp  mouse_backend.cpp
src/math/: calc.cpp  mat4x4.cpp  rect.cpp  vec2.cpp
src/utils/: component.cpp  content.cpp  input_binding.cpp  scene.cpp
